--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -137,23 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "number_of_weeks = 5 # 5\n",
-    "number_of_weeks"
+    "number_of_weeks = 5 # 5\n"
    ]
   },
   {
